--- a/Views/Kiosk/Index.cshtml
+++ b/Views/Kiosk/Index.cshtml
@@ -83,7 +83,7 @@
                     <a asp-action="Details" asp-route-id="@item.PCId"><input type="button" value="Details" class="btn btn-primary" /></a> 
                     <a asp-action="Delete" asp-route-id="@item.Id"><input type="button" value="Delete" class="btn btn-danger" /></a>
                     <form asp-action="Restart">
-                        <input type="hidden" asp-for="Id" />
+                        <input type="hidden" asp-for="@item.Id" />
                         <input type="submit" value="Restart" class="btn btn-danger" /> |
                     </form>
             </td>
